# hacl-star

tests/benchmark/: CMakeLists.txt  bench_aead.cpp  bench_curve25519.cpp  bench_ed25519.cpp  bench_hash.cpp  bench_hash.h  benchmark.cpp  benchmark.h  benchmark_plot_templates.h  runbenchmark.cpp
tests/benchmark/bld/: CMakeCache.txt  Makefile  bench_hash_MD5.csv  bench_hash_MD5.plt  bench_hash_MD5_candlesticks.plt  bench_hash_MD5_per_byte.plt  bench_hash_SHA1.csv  bench_hash_SHA1.plt  bench_hash_SHA1_candlesticks.plt  bench_hash_SHA1_per_byte.plt  bench_hash_SHA2.csv  bench_hash_SHA2.plt  bench_hash_SHA2_224.csv  bench_hash_SHA2_224.plt  bench_hash_SHA2_224_candlesticks.plt  bench_hash_SHA2_224_per_byte.plt  bench_hash_SHA2_256.csv  bench_hash_SHA2_256.plt  bench_hash_SHA2_256_candlesticks.plt  bench_hash_SHA2_256_per_byte.plt  bench_hash_SHA2_384.csv  bench_hash_SHA2_384.plt  bench_hash_SHA2_384_candlesticks.plt  bench_hash_SHA2_384_per_byte.plt  bench_hash_SHA2_512.csv  bench_hash_SHA2_512.plt  bench_hash_SHA2_512_candlesticks.plt  bench_hash_SHA2_512_per_byte.plt  bench_hash_SHA2_candlesticks.plt  bench_hash_SHA2_per_byte.plt  bench_hash_all.plt  bench_hash_all_1024  bench_hash_all_1024.plt  bench_hash_all_16384  bench_hash_all_16384.plt  bench_hash_all_2048  bench_hash_all_2048.plt  bench_hash_all_32768  bench_hash_all_32768.plt  bench_hash_all_4096  (+7 more)
tests/benchmark/bld/libevercrypt/: Makefile
tests/benchmark/libevercrypt/: CMakeLists.txt
tests/benchmark/librfc7748/: CMakeLists.txt
